# rust-production-case-studies

./: README.md  Technical-Verification-Notes.md  demo.rs
  .github/    workflows/:   ci.yml
  case-studies/async-worker-bounded-queue-case-study/: HOW_TO_RUN.txt
  case-studies/async-worker-bounded-queue-case-study/src/: lib.rs  metrics.rs  worker.rs
  case-studies/axum-api-case-study/src/: app.rs  config.rs
  case-studies/axum-api-case-study/src/routes/: health.rs  mod.rs
  case-studies/axum-api-case-study/tests/: api_integration.rs
  case-studies/secure-file-scanner-case-study/: Cargo.toml  HOW_TO_RUN.txt
  case-studies/secure-file-scanner-case-study/src/: lib.rs  report.rs  scanner.rs
.github/workflows/: rust.yml
case-studies/async-worker-bounded-queue-case-study/: Cargo.toml  README.md
case-studies/async-worker-bounded-queue-case-study/.github/workflows/: ci.yml
case-studies/async-worker-bounded-queue-case-study/examples/: demo.rs
case-studies/async-worker-bounded-queue-case-study/src/: config.rs  error.rs  job.rs  retry.rs
case-studies/async-worker-bounded-queue-case-study/tests/: worker_tests.rs
case-studies/axum-api-case-study/: Cargo.toml  Dockerfile  HOW_TO_RUN.txt  README.md  TECHNICAL_VERIFICATION_NOTES.md  deny.toml
case-studies/axum-api-case-study/.github/workflows/: ci.yml
case-studies/axum-api-case-study/docs/: PRODUCTION_CHECKLIST.md
case-studies/axum-api-case-study/src/: app.rs  error.rs  lib.rs  main.rs  telemetry.rs
case-studies/axum-api-case-study/src/routes/: users.rs
case-studies/secure-file-scanner-case-study/: README.md  deny.toml
case-studies/secure-file-scanner-case-study/.github/workflows/: ci.yml
case-studies/secure-file-scanner-case-study/src/: classifier.rs  error.rs  main.rs  policy.rs
case-studies/secure-file-scanner-case-study/tests/: scanner_tests.rs
