[package]
name = "secure-file-scanner"
version = "0.1.0"
edition = "2021"
description = "A production-oriented Rust CLI for safe file intake, signature classification, size limits, and structured scan reports."
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
