[package]
name = "async-worker-bounded-queue"
version = "0.1.0"
edition = "2021"
description = "Production-oriented Rust async worker with bounded queue, retries, backpressure, and metrics counters."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "test-util"] }
