[package]
name = "axum-api-case-study"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Production-oriented Axum API case study with graceful shutdown, tracing, and health checks."

[dependencies]
anyhow = "1"
axum = "0.8"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "request-id", "timeout", "trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
